--- a/clusters/staging/apps.yaml
+++ b/clusters/staging/apps.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: apps
+  namespace: flux-system
 spec:
   interval: 1m0s
   retryInterval: 1m
