--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -16,4 +16,4 @@ spec:
         - name: linkding
           image: sissbruecker/linkding:1.42.0
           ports:
-            - containerPorts: 9090
+            - containerPort: 9090
