feat: secure Linkding

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -16,11 +16,17 @@ spec:
         - name: linkding-data
           persistentVolumeClaim:
             claimName: linkding-data-pvc
+      securityContext:
+        fsGroup: 33 #www-data ID (From Dockerfile in linkding project)
+        runAsUser: 33
+        runAsGroup: 33
       containers:
         - name: linkding
           image: sissbruecker/linkding:1.42.0
           ports:
             - containerPort: 9090
+          securityContext:
+            allowPrivilegeEscalation: false
           volumeMounts:
             - name: linkding-data
               mountPath: /etc/linkding/data
