fix: Test trying to add env var for certs

--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: cloudflared
           image: cloudflare/cloudflared:latest
+          env:
+            - name: TUNNEL_ORIGIN_CERT
+              value: /etc/cloudflared/cert.pem
           args:
             - tunnel
             - --config
