--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -17,7 +17,7 @@ spec:
           image: cloudflare/cloudflared:latest
           env:
             - name: TUNNEL_ORIGIN_CERT
-              value: /etc/cloudflared/cert.pem
+              value: /etc/cloudflared/creds
           args:
             - tunnel
             - --config
