--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflared
+  namespace: linkding
 spec:
   replicas: 2
   selector:
@@ -17,7 +18,7 @@ spec:
           image: cloudflare/cloudflared:latest
           env:
             - name: TUNNEL_ORIGIN_CERT
-              value: etc/cloudflare/creds/cert.pem
+              value: /etc/cloudflared/creds/cert.pem
           args:
             - tunnel
             - --config
