--- a/apps/staging/linkding/cloudflare.yaml
+++ b/apps/staging/linkding/cloudflare.yaml
@@ -41,7 +41,7 @@ spec:
             # to run the tunnel. cloudflared will read this file from its local filesystem,
             # and it will be stores in a k8s secret
             - name: creds
-              mountPath: /etc/cloudflare/creds
+              mountPath: /etc/cloudflared/creds
               readOnly: true
       volumes:
         - name: creds
